--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@pooltogether/evm-chains-extended",
-  "version": "0.7.0",
+  "name": "@simplicy-io/evm-chains-extended",
+  "version": "0.1.0",
   "description": "Package to get chain data from ethereum-lists/chains with extra data such as blockExplorerUrls",
-  "author": "Chuck Bergeron <chuck@pooltogether.com>",
+  "author": "IaM <DEV>",
   "license": "MIT",
   "keywords": [
     "evm",
@@ -20,13 +20,13 @@
   "main": "dist/cjs/index.js",
   "types": "dist/cjs/index.d.ts",
   "unpkg": "dist/umd/index.min.js",
-  "homepage": "https://github.com/pooltogether/evm-chains-extended",
+  "homepage": "https://github.com/simplicy-io/evm-chains-extended",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/pooltogether/evm-chains-extended.git"
+    "url": "git+https://github.com/simplicy-io/evm-chains-extended.git"
   },
   "bugs": {
-    "url": "https://github.com/pooltogether/evm-chains-extended/issues"
+    "url": "https://github.com/simplicy-io/evm-chains-extended/issues"
   },
   "scripts": {
     "start": "tsdx watch --onSuccess \"yalc push\"",
